K8SPG-285: add more info to version service
https://jira.percona.com/browse/K8SPG-285
