# percona/controllers/perconapgcluster_controller.go
@@ -2,12 +2,15 @@ package controllers
 
 import (
 	"context"
+	"os"
 	"strconv"
 
 	"github.com/pkg/errors"
 	"go.opentelemetry.io/otel/trace"
+	appsv1 "k8s.io/api/apps/v1"
 	corev1 "k8s.io/api/core/v1"
 	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
+	"k8s.io/apimachinery/pkg/types"
 	"k8s.io/client-go/tools/record"
 	"sigs.k8s.io/controller-runtime/pkg/builder"
 	"sigs.k8s.io/controller-runtime/pkg/client"
@@ -17,6 +20,7 @@ import (
 
 	"github.com/percona/percona-postgresql-operator/internal/logging"
 	"github.com/percona/percona-postgresql-operator/internal/naming"
+	"github.com/percona/percona-postgresql-operator/percona/k8s"
 	"github.com/percona/percona-postgresql-operator/percona/pmm"
 	"github.com/percona/percona-postgresql-operator/percona/version"
 	"github.com/percona/percona-postgresql-operator/pkg/apis/pg.percona.com/v2beta1"
@@ -46,6 +50,7 @@ func (r *PGClusterReconciler) SetupWithManager(mgr manager.Manager) error {
 // +kubebuilder:rbac:groups=pg.percona.com,resources=perconapgclusters,verbs=get;list;watch
 // +kubebuilder:rbac:groups=pg.percona.com,resources=perconapgclusters/status,verbs=patch;update
 // +kubebuilder:rbac:groups=postgres-operator.crunchydata.com,resources=postgresclusters,verbs=get;list;create;update;patch;watch
+// +kubebuilder:rbac:groups=apps,resources=replicasets,verbs=create;delete;get;list;patch;watch
 
 func (r *PGClusterReconciler) Reconcile(ctx context.Context, request reconcile.Request) (reconcile.Result, error) {
 	log := logging.FromContext(ctx)
@@ -66,7 +71,7 @@ func (r *PGClusterReconciler) Reconcile(ctx context.Context, request reconcile.R
 		return reconcile.Result{}, errors.Wrap(err, "get version meta")
 	}
 
-	if err := version.EnsureVersion(ctx, perconaPGCluster, vm); err != nil {
+	if err := version.EnsureVersion(ctx, vm); err != nil {
 		return reconcile.Result{}, errors.Wrap(err, "ensure versions")
 	}
 
@@ -151,7 +156,7 @@ func (r *PGClusterReconciler) Reconcile(ctx context.Context, request reconcile.R
 }
 
 func (r *PGClusterReconciler) getVersionMeta(ctx context.Context, cr *v2beta1.PerconaPGCluster) (version.Meta, error) {
-	return version.Meta{
+	vm := version.Meta{
 		Apply:           "disabled",
 		OperatorVersion: version.Version,
 		CRUID:           string(cr.GetUID()),
@@ -160,5 +165,60 @@ func (r *PGClusterReconciler) getVersionMeta(ctx context.Context, cr *v2beta1.Pe
 		PGVersion:       strconv.Itoa(cr.Spec.PostgresVersion),
 		BackupVersion:   "",
 		PMMVersion:      "",
-	}, nil
+		PMMEnabled:      cr.Spec.PMM != nil && cr.Spec.PMM.Enabled,
+	}
+	if _, ok := cr.Labels["helm.sh/chart"]; ok {
+		vm.HelmDeployCR = true
+	}
+	for _, set := range cr.Spec.InstanceSets {
+		if len(set.Sidecars) > 0 {
+			vm.SidecarsUsed = true
+			break
+		}
+	}
+	operatorDepl, err := r.getOperatorDeployment(ctx)
+	if err != nil {
+		return version.Meta{}, errors.Wrap(err, "failed to get operator deployment")
+	}
+	if _, ok := operatorDepl.Labels["helm.sh/chart"]; ok {
+		vm.HelmDeployOperator = true
+	}
+	return vm, nil
+}
+
+func (r *PGClusterReconciler) getOperatorDeployment(ctx context.Context) (*appsv1.Deployment, error) {
+	ns, err := k8s.GetOperatorNamespace()
+	if err != nil {
+		return nil, errors.Wrap(err, "failed to get operator namespace")
+	}
+	name, err := os.Hostname()
+	if err != nil {
+		return nil, errors.Wrap(err, "failed to get operator hostname")
+	}
+
+	pod := new(corev1.Pod)
+	err = r.Client.Get(ctx, types.NamespacedName{Namespace: ns, Name: name}, pod)
+	if err != nil {
+		return nil, errors.Wrap(err, "failed to get operator pod")
+	}
+	if len(pod.OwnerReferences) == 0 {
+		return nil, errors.New("operator pod has no owner reference")
+	}
+
+	rs := new(appsv1.ReplicaSet)
+	err = r.Client.Get(ctx, types.NamespacedName{Namespace: pod.Namespace, Name: pod.OwnerReferences[0].Name}, rs)
+	if err != nil {
+		return nil, errors.Wrap(err, "failed to get operator replicaset")
+	}
+	if len(rs.OwnerReferences) == 0 {
+		return nil, errors.New("operator replicaset has no owner reference")
+	}
+
+	depl := new(appsv1.Deployment)
+	err = r.Client.Get(ctx, types.NamespacedName{Namespace: pod.Namespace, Name: rs.OwnerReferences[0].Name}, depl)
+	if err != nil {
+		return nil, errors.Wrap(err, "failed to get operator deployment")
+	}
+
+	return depl, nil
 }
